# Candy-Crush

./: CMakeLists.txt  README.md
BusinessLayer/: Board.cpp  Board.h  BoardManager.cpp  BoardManager.h  CMakeLists.txt  Candy.cpp  Candy.h  GameController.cpp  level.cpp  level.h
BusinessLayer/public/: DTOs.h  GameController.h  GameEvents.h
Docs/: Candy Crush Architecture Summary.md
Presentation/: CMakeLists.txt
Presentation/include/: BackgroundImage.h  Game.h  GameFrame.h  MusicPlayer.h  Observable.h  Observer.h  Page.h  PageManager.h  TemporaryDTOs.h  Widget.h
Presentation/include/pages/gameplayPage/: Board.h  BoardWidget.h  BottomBarWidget.h  Candies.h  CandyWidget.h  GameplayPage.h  HomeButton.h  LevelClearedWidget.h  LevelInfoWidget.h  LevelLostWidget.h  ObjectiveWidget.h  TopBarWidget.h
Presentation/include/pages/gameplayPage/pausePopup/: MusicButton.h  PausePopUp.h  PlayButton.h
Presentation/include/pages/levelsPage/: LevelButton.h  LevelsPage.h
Presentation/include/pages/welcomePage/: StartButton.h  WelcomePage.h
Presentation/src/: Game.cpp  GameFrame.cpp  MusicPlayer.cpp  PageManager.cpp  main.cpp
Presentation/src/pages/gameplayPage/: Board.cpp  BoardWidget.cpp  BottomBarWidget.cpp  Candies.cpp  CandyWidget.cpp  GameplayPage.cpp  LevelClearedWidget.cpp  LevelInfoWidget.cpp  LevelLostWidget.cpp  ObjectiveWidget.cpp  TopBarWidget.cpp
Presentation/src/pages/gameplayPage/pausePopUp/: HomeButton.cpp  MusicButton.cpp  PlayButton.cpp  pausePopUp.cpp
Presentation/src/pages/levelsPage/: LevelButton.cpp  LevelsPage.cpp
Presentation/src/pages/welcomePage/: StartButton.cpp  WelcomePage.cpp
